--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Grayscale - Start Bootstrap Theme</title>
+  <title>Russia - All you need to know</title>
 
   <!-- Bootstrap core CSS -->
   <link href="/assests/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
