Add even more to site

--- a/_includes/projectsection.html
+++ b/_includes/projectsection.html
@@ -9,8 +9,8 @@
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
-            <h4>Shoreline</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+            <h4>Moscow</h4>
+            <p class="text-black-50 mb-0">The main hub of Russia. Everything... and I mean EVERYTHING happens here. Also, get your pet bear here!</p>
           </div>
         </div>
       </div>
