--- a/_includes/section.html
+++ b/_includes/section.html
@@ -3,9 +3,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+          <h2 class="text-white mb-4">Vodka - a drink made by Angels but drank by Devils.</h2>
+          <p class="text-white-50">Vodka is allowed to be consumed only by those over the age of 21 in the State of PA or by any Russian regardless of age. You can find some 
+            <a href="https://www.totalwine.com/spirits/russia/c/001101">here on this site</a>. The smooth taste will melt all your problems away.... maybe.</p>
         </div>
       </div>
       <img src="/assests/img/ipad.png" class="img-fluid" alt="">
