--- a/_includes/contactsection.html
+++ b/_includes/contactsection.html
@@ -10,7 +10,7 @@
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Address</h4>
               <hr class="my-4">
-              <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+              <div class="small text-black-50">Moscow, Russia</div>
             </div>
           </div>
         </div>
@@ -22,7 +22,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">hello@yourdomain.com</a>
+                <a href="#">Vodka@Russianbear.org</a>
               </div>
             </div>
           </div>
@@ -34,7 +34,7 @@
               <i class="fas fa-mobile-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Phone</h4>
               <hr class="my-4">
-              <div class="small text-black-50">+1 (555) 902-8832</div>
+              <div class="small text-black-50">1800-RSSA-MOB</div>
             </div>
           </div>
         </div>
